; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_mrb_struct_set_m.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_mrb_struct_set_m.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"o\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_struct_set_m to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_struct_set_m(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @mrb_proc_cfunc_env_get(i32* %8, i32 0)
  %10 = call i64 @mrb_fixnum(i32 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @mrb_get_args(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %7)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @mrb_struct_modify(i32* %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = call i32* @RSTRUCT_PTR(i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %25, label %20

20:                                               ; preds = %2
  %21 = load i64, i64* %5, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i64 @RSTRUCT_LEN(i32 %22)
  %24 = icmp uge i64 %21, %23
  br i1 %24, label %25, label %31

25:                                               ; preds = %20, %2
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %4, align 4
  %28 = load i64, i64* %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @mrb_ary_set(i32* %26, i32 %27, i64 %28, i32 %29)
  br label %36

31:                                               ; preds = %20
  %32 = load i32, i32* %7, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = load i64, i64* %5, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32 %32, i32* %35, align 4
  br label %36

36:                                               ; preds = %31, %25
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i64 @mrb_fixnum(i32) #1

declare dso_local i32 @mrb_proc_cfunc_env_get(i32*, i32) #1

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*) #1

declare dso_local i32 @mrb_struct_modify(i32*, i32) #1

declare dso_local i32* @RSTRUCT_PTR(i32) #1

declare dso_local i64 @RSTRUCT_LEN(i32) #1

declare dso_local i32 @mrb_ary_set(i32*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
